--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div class="navbar">
         <nav>
             <ul class="nav_links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Skills</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#skills">Skills</a></li>
             </ul>
         </nav>
         <a class="btn" href="mailto:nivcaspi3@gmail.com"><button>Contact</button></a>
     </div>
     <!-- Hero -->
-    <div class="hero">
+    <div id="home" class="hero">
         <div class="title-text">
             <h1 class="title">I'm Niv</h1>
             <h2 class="title">a progammer in training</h2>
@@ -34,7 +34,7 @@
 
     </div>
     <!-- About Me -->
-    <section class="color-1">
+    <section id="about" class="color-1">
         <div class="container intro">
             <div class="profile-pic">
                 <img class="me" src="./images/Niv.jpeg" alt="profile-pic" height="200px">
@@ -47,9 +47,9 @@
         <hr>
         <div class="container aboutme">
             <div class="about-me title-1">
-                <h3>How's It going?</h3>
+                <h3>My Skills</h3>
             </div>
-            <div class="about-me-grid">
+            <div id="skills" class="about-me-grid">
                 <div class="pc">
                     <img class="sub-img" src="./images/desktop.png" alt="desktop">
                 </div>
