--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
     <link rel="stylesheet" href="./css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Neuton:ital,wght@0,200;0,300;0,400;0,700;0,800;1,400&family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
 </head>
 
 <body>
     <!-- Navigation Bar -->
     <div class="navbar">
         <nav>
-            
             <ul class="nav_links">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -57,7 +53,7 @@
                 <div class="coding">
                     <h3 class="subtitle">Gaming & Coding</h3>
                     <p>Ever since I was 8 years old, I remember myself on a computer either playing games or watching
-                        videos, it has been a long dream of mine to know how thins work behind the scenes and now I
+                        videos. it has been a long dream of mine to know how things work behind the scenes and now I
                         decided to start learning how to code and develop Website.</p>
                 </div>
                 <div class="japan">
@@ -65,9 +61,9 @@
                 </div>
                 <div class="anime">
                     <h3 class="subtitle">Anime & Japan</h3>
-                    <p>I remember watching Naruto and Inuyasha when I was young. at the age of 16 I started watching
-                        Naruto again and from there on a journey has begun, I started watching all sorts of anime,
-                        seasonal animes and even old-school ones. with that came the love to Japan and it's culture</p>
+                    <p>I remember watching Naruto and Inuyasha when I was young. At the age of 16 I started watching
+                        Naruto again and from there on, a journey has begun, I started watching all sorts of anime,
+                        seasonal animes and even old-school ones. With that came the love to Japan and it's culture</p>
                 </div>
             </div>
         </div>
